--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -3,8 +3,21 @@ body {
   margin: 0;
 }
 
-#mapid,
 body,
 html {
   height: 100%;
+  width: 100%;
+}
+
+#mapcontainer {
+  display: flex;
+  justify-content: center;
+}
+
+#mapid {
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 1px;
+  height: 80%;
+  width: 80%;
 }
